force-app/main/default/objects/Sales_Region__c/Sales_Region__c.object-meta.xml
<CustomObject>
    <description>Created as a result of SFDC and iDeal integration.</description>
    <label>Sales Region</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Regions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>