force-app/main/default/objects/Sales_Region__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Active flag based on End Date</description>
    <formula>OR(Today() &lt; sales_h_end_date__c, ISNULL(sales_h_end_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>