force-app/main/default/objects/Sales_Region__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Brand Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>