force-app/main/default/objects/Sales_Region__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency : Email address which the report will be sent to. Separate multiple email addresses using the semicolon character &quot;;&quot;</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>