force-app/main/default/objects/Sales_Region__c/fields/Hide_TMCTA__c.field-meta.xml
<CustomField>
    <fullName>Hide_TMCTA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show/hide on the Website</description>
    <label>Hide TMCTA</label>
    <type>Checkbox</type>
</CustomField>