force-app/main/default/objects/Sales_Region__c/fields/sales_h_end_date__c.field-meta.xml
<CustomField>
    <fullName>sales_h_end_date__c</fullName>
    <description>Field created as a result of SFDC and iDeal integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>