force-app/main/default/objects/Sales_Region__c/fields/sales_h_eq_type__c.field-meta.xml
<CustomField>
    <fullName>sales_h_eq_type__c</fullName>
    <label>Sales Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate-Industry</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Contract Group</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>