force-app/main/default/objects/Sales_Region__c/fields/sales_h_hierarchy__c.field-meta.xml
<CustomField>
    <fullName>sales_h_hierarchy__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Hierarchy</label>
    <type>Text</type>
</CustomField>