force-app/main/default/objects/Sales_Region__c/fields/sales_h_level_id__c.field-meta.xml
<CustomField>
    <fullName>sales_h_level_id__c</fullName>
    <formula>IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.Name)),7,

IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.Name)),6,
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.Name)),5,
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.Name)),4,
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.Name)),3,
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.Name)),2, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.Name)),1,
IF(ISBLANK(sales_h_parent_region__r.Name),0,8)
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>