force-app/main/default/objects/Sales_Region__c/fields/sales_h_number__c.field-meta.xml
<CustomField>
    <fullName>sales_h_number__c</fullName>
    <displayFormat>SH-{0}</displayFormat>
    <label>Sales Hierarchy number</label>
    <type>AutoNumber</type>
</CustomField>