force-app/main/default/objects/Sales_Region__c/fields/sales_h_parent_region__c.field-meta.xml
<CustomField>
    <fullName>sales_h_parent_region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Sales Regions</relationshipLabel>
    <relationshipName>Sales_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>