force-app/main/default/objects/Sales_Region__c/fields/sales_h_parent_Sales_region_Id__c.field-meta.xml
<CustomField>
    <fullName>sales_h_parent_Sales_region_Id__c</fullName>
    <formula>sales_h_parent_region__r.sales_h_region_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Sales Region Id</label>
    <type>Text</type>
</CustomField>