force-app/main/default/objects/Sales_Region__c/fields/sales_h_region_id__c.field-meta.xml
<CustomField>
    <fullName>sales_h_region_id__c</fullName>
    <description>Field created as a result of SFDC and iDeal integration.</description>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Sales Region ID</label>
    <type>AutoNumber</type>
</CustomField>