force-app/main/default/objects/Sales_Region__c/fields/sales_h_start_date__c.field-meta.xml
<CustomField>
    <fullName>sales_h_start_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Field created as a result of SFDC and iDeal integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>