force-app/main/default/objects/Sales_Region__c/fields/Sales_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hierarchy__c</fullName>
    <formula>Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Hierarchy</label>
    <type>Text</type>
</CustomField>