force-app/main/default/objects/Sales_Region__c/fields/Top_ID__c.field-meta.xml
<CustomField>
    <fullName>Top_ID__c</fullName>
    <formula>IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c,

IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_parent_region__r.sales_h_region_id__c, 
IF( 
NOT(ISBLANK(sales_h_parent_region__r.sales_h_region_id__c)),sales_h_parent_region__r.sales_h_region_id__c, 
IF(ISBLANK(sales_h_parent_region__r.sales_h_region_id__c),&apos;0&apos;,&apos;8&apos;) 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top ID</label>
    <type>Text</type>
</CustomField>