force-app/main/default/objects/Sales_Region__c/validationRules/Channel_Team_Sales_Hierarchy_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Team_Sales_Hierarchy_Selection</fullName>
    <active>true</active>
    <description>Channel Team should select the Sales hierarchy Type as Contract Group OR Consolidator</description>
    <errorConditionFormula>AND(
$Setup.EnableValidationRule__c.Flag_To_Prevent_SR_Hierarchy_Type__c = FALSE,
$Permission.QC_Support_Team,
OR(
NOT(
OR(
ISPICKVAL(sales_h_eq_type__c , &quot;Contract Group&quot;),
ISPICKVAL(sales_h_eq_type__c , &quot;Consolidator&quot;))),
ISBLANK(TEXT(sales_h_eq_type__c)))
)</errorConditionFormula>
    <errorDisplayField>sales_h_eq_type__c</errorDisplayField>
    <errorMessage>Channel Support Team should select the Sales Hierarchy Type as &quot;Consolidator&quot; OR &quot;Contract Group&quot;</errorMessage>
</ValidationRule>