force-app/main/default/objects/Sales_Region__c/validationRules/Consolidator_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Consolidator_Email_Format</fullName>
    <active>true</active>
    <description>Enter Multiple Email addresses seperated by ;</description>
    <errorConditionFormula>AND(
$Setup.EnableValidationRule__c.Flag_To_Prevent_SR_Email_VR_Fired__c = FALSE,
ISPICKVAL(sales_h_eq_type__c , &quot;Consolidator&quot;),
OR(
ISBLANK(Email__c),
AND(NOT(ISBLANK(Email__c)),
NOT(REGEX(substitute(trim(Email__c ),&apos; &apos;,&apos;&apos;), &quot;^([A-Za-z0-9,!#\\$%&amp;&apos;\\*\\+/=\\?\\^_`\\{\\|}~-]+(\\.[A-Za-z0-9,!#\\$%&amp;&apos;\\*\\+/=\\?\\^_`\\{\\|}~-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*\\.([A-Za-z]{2,})){1}(;[A-Za-z0-9,!#\\$%&amp;&apos;\\*\\+/=\\?\\^_`\\{\\|}~-]+(\\.[A-Za-z0-9,!#\\$%&amp;&apos;\\*\\+/=\\?\\^_`\\{\\|}~-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*\\.([A-Za-z]{2,}))*$&quot; )))))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter the valid Email address for Consolidator and multiple email address should be seperated by ;</errorMessage>
</ValidationRule>