force-app/main/default/objects/Sales_Region__c/listViews/All_Agency_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>All_Agency_Sales_Regions</fullName>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_eq_type__c</columns>
    <columns>sales_h_desc__c</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Agency Sales Regions</label>
</ListView>