force-app/main/default/objects/Sales_Region__c/listViews/All_Consolidators.listView-meta.xml
<ListView>
    <fullName>All_Consolidators</fullName>
    <columns>sales_h_type__c</columns>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>Active__c</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>sales_h_parent_region__c</columns>
    <columns>sales_h_parent_id__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_end_date__c</columns>
    <columns>sales_h_level_id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sales_h_eq_type__c</field>
        <operation>equals</operation>
        <value>Consolidator</value>
    </filters>
    <label>All Consolidators</label>
</ListView>