force-app/main/default/objects/Sales_Region__c/listViews/All_Customer_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>All_Customer_Sales_Regions</fullName>
    <columns>Sales_Hierarchy__c</columns>
    <columns>NAME</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>sales_h_parent_region__c</columns>
    <columns>sales_h_parent_id__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_end_date__c</columns>
    <columns>sales_h_level_id__c</columns>
    <columns>sales_h_eq_type__c</columns>
    <columns>Rank__c</columns>
    <columns>Note__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sales_h_eq_type__c</field>
        <operation>equals</operation>
        <value>Corporate,Corporate-Industry</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Customer Sales Regions</label>
</ListView>