force-app/main/default/objects/Sales_Region__c/listViews/All_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>All_Sales_Regions</fullName>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>Active__c</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_end_date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Regions</label>
</ListView>