force-app/main/default/objects/Sales_Region__c/listViews/ASIA_Agency_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>ASIA_Agency_Sales_Regions</fullName>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_eq_type__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>QAC_Region__c</field>
        <operation>equals</operation>
        <value>ASIA</value>
    </filters>
    <label>ASIA Agency Sales Regions</label>
</ListView>