force-app/main/default/objects/Sales_Region__c/listViews/EUMEAFR_Agency_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>EUMEAFR_Agency_Sales_Regions</fullName>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>QAC_Region__c</field>
        <operation>equals</operation>
        <value>EUMEIAFR</value>
    </filters>
    <label>EUMEAFR Agency Sales Regions</label>
</ListView>