force-app/main/default/objects/Sales_Region__c/listViews/HLO_Brand.listView-meta.xml
<ListView>
    <fullName>HLO_Brand</fullName>
    <columns>QAC_Region__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_eq_type__c</columns>
    <columns>sales_h_desc__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sales_h_parent_region__c</field>
        <operation>equals</operation>
        <value>HW - Helloworld Brand</value>
    </filters>
    <label>HLO Brand</label>
</ListView>