force-app/main/default/objects/Sales_Region__c/listViews/MZ_Sales_Region.listView-meta.xml
<ListView>
    <fullName>MZ_Sales_Region</fullName>
    <columns>QAC_Region__c</columns>
    <columns>Sales_Hierarchy__c</columns>
    <columns>NAME</columns>
    <columns>Brand_Code__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_end_date__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sales_h_desc__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>sales_h_eq_type__c</field>
        <operation>equals</operation>
        <value>Industry</value>
    </filters>
    <label>Inactive Sales Regions</label>
</ListView>