force-app/main/default/objects/Sales_Region__c/listViews/Region_ID.listView-meta.xml
<ListView>
    <fullName>Region_ID</fullName>
    <columns>Sales_Hierarchy__c</columns>
    <columns>NAME</columns>
    <columns>sales_h_region_id__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>sales_h_start_date__c</columns>
    <columns>sales_h_end_date__c</columns>
    <columns>sales_h_eq_type__c</columns>
    <columns>Rank__c</columns>
    <columns>Note__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sales_h_eq_type__c</field>
        <operation>equals</operation>
        <value>Contract Group</value>
    </filters>
    <label>All Contract Groups</label>
</ListView>